# fsa_boilerplate

./: .env-local  README.md  asgi.py  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  db.py  models.py
app/heroes/: crud.py  models.py
app/roles/: api.py  crud.py  dependencies.py  examples.py  models.py
app/roles/tests/: tests.py
migrations/: env.py
migrations/versions/: d38e7d8c0968_heroes.py
